src_old/objects/UIConfig__c.object
<CustomObject>
    <description>UIConfig defines how specific fields are rendered within the UI on the Project screens.</description>
    <fields>
        <fullName>Access__c</fullName>
        <label>Access</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Editable</fullName>
                    <color>#FF6600</color>
                    <label>Editable</label>
                </value>
                <value>
                    <fullName>Hidden</fullName>
                    <color>#999999</color>
                    <label>Hidden</label>
                </value>
                <value>
                    <fullName>Visible</fullName>
                </value>
                <value>
                    <fullName>Edit</fullName>
                    <isActive>false</isActive>
                    <label>Edit</label>
                </value>
                <value>
                    <fullName>Read</fullName>
                    <isActive>false</isActive>
                    <label>Read</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Assigned</fullName>
                </value>
                <value>
                    <fullName>Booked</fullName>
                </value>
                <value>
                    <fullName>Canceled</fullName>
                </value>
                <value>
                    <fullName>Closed</fullName>
                </value>
                <value>
                    <fullName>Ended</fullName>
                </value>
                <value>
                    <fullName>In Progress</fullName>
                </value>
                <value>
                    <fullName>Launched</fullName>
                </value>
                <value>
                    <fullName>Open</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
                <value>
                    <fullName>Planning</fullName>
                </value>
                <value>
                    <fullName>Reported</fullName>
                </value>
                <value>
                    <fullName>Started</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>UIElement__c</fullName>
        <label>Unique Key</label>
        <length>50</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>UI_Element__c</fullName>
        <label>UI Element</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>UIConfig</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>UIElement__c</columns>
        <columns>Status__c</columns>
        <columns>Access__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>UI-{000}</displayFormat>
        <label>UIConfig Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UIConfig</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>